SpiderData/csdn/Clean/01768.txt
File "/usr/local/lib/python2.7/dist-packages/torchlight-1.0-py2.7.egg/torchlight/io.py", line 130
    print(str, file=f)
                   ^
SyntaxError: invalid syntax

Q：默认运行环境为pthon2，代码为python3的语法。
 A：运行时使用python3指定环境

